# Change log
Change log for [logdissect](https://github.com/dogoncouch/logdissect)

## [Unreleased]
#### Added
- 'rgrep' morpher: reverse grep
- 'outjson' output module for JSON
- 'injson' parser module for JSON
- Dev tests for json modules

## [1.1.1] - 2017-03-28
### Fixed
- 'syslog' parser no longer breaks without PID

## [1.1] - 2017-03-26
### Added
- 'last' morpher
- Terminal output by default
- Silent and verbose options
- source_host and source_process attributes in LogEntry object

## [1.0] - 2017-03-21
- First stable release